cmake_minimum_required(VERSION 3.12.1)

set(CPACK_ARCHIVE_COMPONENT_INSTALL ON)
set(CPACK_COMPONENTS_GROUPING ONE_PER_GROUP)
set(CPACK_DEB_COMPONENT_INSTALL ON)
set(CPACK_GENERATOR "DEB")
set(CPACK_DEBIAN_PACKAGE_MAINTAINER "LIMA Publisher")
set(CPACK_PACKAGE_NAME lima-deep-models)
set(CPACK_PACKAGE_VERSION "0.1.4")
set(CPACK_DEBIAN_PACKAGE_ARCHITECTURE "all")
set(CPACK_DEBIAN_FILE_NAME DEB-DEFAULT)
set(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_CURRENT_SOURCE_DIR}/copyright")

include(CPack)

cpack_add_component_group(Afrikaans)
cpack_add_component_group(Arabic)
cpack_add_component_group(Armenian)
cpack_add_component_group(Basque)
cpack_add_component_group(Belarusian)
cpack_add_component_group(Breton)
cpack_add_component_group(Bulgarian)
cpack_add_component_group(Catalan)
cpack_add_component_group(Chinese)
cpack_add_component_group(Chinese)
cpack_add_component_group(Classical_Chinese)
cpack_add_component_group(Coptic)
cpack_add_component_group(Croatian)
cpack_add_component_group(Czech)
cpack_add_component_group(Danish)
cpack_add_component_group(Dutch)
cpack_add_component_group(English)
cpack_add_component_group(Estonian)
cpack_add_component_group(Finnish)
cpack_add_component_group(French)
cpack_add_component_group(Galician)
cpack_add_component_group(German)
cpack_add_component_group(Greek)
cpack_add_component_group(Hebrew)
cpack_add_component_group(Hindi)
cpack_add_component_group(Hungarian)
cpack_add_component_group(Indonesian)
cpack_add_component_group(Irish)
cpack_add_component_group(Italian)
cpack_add_component_group(Japanese)
cpack_add_component_group(Kazakh)
cpack_add_component_group(Korean)
cpack_add_component_group(Kurmanji)
cpack_add_component_group(Latin)
cpack_add_component_group(Latvian)
cpack_add_component_group(Lithuanian)
cpack_add_component_group(Maltese)
cpack_add_component_group(Marathi)
cpack_add_component_group(Naija)
cpack_add_component_group(North_Sami)
cpack_add_component_group(Norwegian)
cpack_add_component_group(Norwegian)
cpack_add_component_group(Old_Church_Slavonic)
cpack_add_component_group(Old_French)
cpack_add_component_group(Old_Russian)
cpack_add_component_group(Persian)
cpack_add_component_group(Polish)
cpack_add_component_group(Portuguese)
cpack_add_component_group(Romanian)
cpack_add_component_group(Russian)
cpack_add_component_group(Serbian)
cpack_add_component_group(Slovak)
cpack_add_component_group(Slovenian)
cpack_add_component_group(Spanish)
cpack_add_component_group(Swedish)
cpack_add_component_group(Tamil)
cpack_add_component_group(Telugu)
cpack_add_component_group(Thai)
cpack_add_component_group(Turkish)
cpack_add_component_group(Ukrainian)
cpack_add_component_group(Urdu)
cpack_add_component_group(Uyghur)
cpack_add_component_group(Vietnamese)
cpack_add_component_group(Welsh)
cpack_add_component_group(Wolof)
cpack_add_component_group(Scottish_Gaelic)

add_subdirectory(TensorFlowTokenizer)
add_subdirectory(TensorFlowMorphoSyntax)

