cmake_minimum_required(VERSION 3.12.1)

set(CPACK_ARCHIVE_COMPONENT_INSTALL ON)
set(CPACK_COMPONENTS_GROUPING ONE_PER_GROUP)
set(CPACK_DEB_COMPONENT_INSTALL ON)
set(CPACK_GENERATOR "DEB")
set(CPACK_DEBIAN_PACKAGE_MAINTAINER "LIMA Publisher")
set(CPACK_PACKAGE_NAME lima-deep-models)
set(CPACK_PACKAGE_VERSION "0.1.5")
set(CPACK_DEBIAN_PACKAGE_ARCHITECTURE "all")
set(CPACK_DEBIAN_FILE_NAME DEB-DEFAULT)
set(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_CURRENT_SOURCE_DIR}/copyright")

include(CPack)

cpack_add_component_group(afr-Afrikaans)
cpack_add_component_group(sqi-Albanian)
cpack_add_component_group(ara-Arabic)
cpack_add_component_group(hye-Armenian)
cpack_add_component_group(eus-Basque)
cpack_add_component_group(bel-Belarusian)
cpack_add_component_group(bre-Breton)
cpack_add_component_group(bul-Bulgarian)
cpack_add_component_group(cat-Catalan)
cpack_add_component_group(zho-simp-Chinese)
cpack_add_component_group(zho-Chinese)
cpack_add_component_group(lzh-Classical_Chinese)
cpack_add_component_group(cop-Coptic)
cpack_add_component_group(hrv-Croatian)
cpack_add_component_group(ces-Czech)
cpack_add_component_group(dan-Danish)
cpack_add_component_group(nld-Dutch)
cpack_add_component_group(eng-English)
cpack_add_component_group(est-Estonian)
cpack_add_component_group(fin-Finnish)
cpack_add_component_group(fra-French)
cpack_add_component_group(glg-Galician)
cpack_add_component_group(deu-German)
cpack_add_component_group(ell-Greek)
cpack_add_component_group(heb-Hebrew)
cpack_add_component_group(hin-Hindi)
cpack_add_component_group(hun-Hungarian)
cpack_add_component_group(ind-Indonesian)
cpack_add_component_group(gle-Irish)
cpack_add_component_group(ita-Italian)
cpack_add_component_group(jpn-Japanese)
cpack_add_component_group(kaz-Kazakh)
cpack_add_component_group(kor-Korean)
cpack_add_component_group(kmr-Kurmanji)
cpack_add_component_group(lat-Latin)
cpack_add_component_group(lav-Latvian)
cpack_add_component_group(lit-Lithuanian)
cpack_add_component_group(mlt-Maltese)
cpack_add_component_group(mar-Marathi)
cpack_add_component_group(pcm-Naija)
cpack_add_component_group(sme-North_Sami)
cpack_add_component_group(nob-Norwegian)
cpack_add_component_group(nno-Norwegian)
cpack_add_component_group(chu-Old_Church_Slavonic)
cpack_add_component_group(fro-Old_French)
cpack_add_component_group(orv-Old_Russian)
cpack_add_component_group(fas-Persian)
cpack_add_component_group(pol-Polish)
cpack_add_component_group(por-Portuguese)
cpack_add_component_group(ron-Romanian)
cpack_add_component_group(rus-Russian)
cpack_add_component_group(gla-Scottish_Gaelic)
cpack_add_component_group(srp-Serbian)
cpack_add_component_group(slk-Slovak)
cpack_add_component_group(slv-Slovenian)
cpack_add_component_group(spa-Spanish)
cpack_add_component_group(swe-Swedish)
cpack_add_component_group(tam-Tamil)
cpack_add_component_group(tel-Telugu)
cpack_add_component_group(tha-Thai)
cpack_add_component_group(tur-Turkish)
cpack_add_component_group(ukr-Ukrainian)
cpack_add_component_group(urd-Urdu)
cpack_add_component_group(uig-Uyghur)
cpack_add_component_group(vie-Vietnamese)
cpack_add_component_group(cym-Welsh)
cpack_add_component_group(wol-Wolof)

add_subdirectory(TensorFlowTokenizer)
add_subdirectory(TensorFlowMorphoSyntax)
add_subdirectory(TensorFlowLemmatizer)

